# LTX-Desktop

./: .cursorignore  .dockerignore  .env.web  .gitignore  .npmrc  AGENTS.md  Dockerfile  LICENSE.txt  NOTICES.md  README.md  api_reference.md  docker-compose.yml  docker-entrypoint.sh  electron-builder.yml  image2image.md  index.html  modeldownload.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: api_model_specs.py  api_types.py  app_factory.py  app_handler.py  architecture.md  export_openapi_schema.py  install_sageattention.bat  ltx2_server.py  pyproject.toml  pyrightconfig.json
backend/_routes/: _errors.py  generation.py  hf_auth.py  image_to_image.py  models.py  preprocess.py  remote.py  settings.py
backend/handlers/: __init__.py  download_handler.py  generation_handler.py  health_handler.py  hf_auth_handler.py  hf_auth_utils.py  ic_lora_handler.py  image_generation_handler.py  models_handler.py  pipelines_handler.py  retake_handler.py  suggest_gap_prompt_handler.py  text_handler.py  video_generation_handler.py
backend/runtime_config/: model_download_specs.py  port_constant.py  runtime_config.py  runtime_policy.py
backend/services/: interfaces.py  keyword_extractor.py  ltx_pipeline_common.py
backend/services/a2v_pipeline/: a2v_pipeline.py  distilled_a2v_pipeline.py  ltx_a2v_pipeline.py
backend/services/fast_video_pipeline/: fast_video_pipeline.py  ltx_fast_video_pipeline.py
backend/services/ic_lora_pipeline/: ic_lora_pipeline.py  ltx_ic_lora_pipeline.py
backend/services/image_generation_pipeline/: image_generation_pipeline.py  zit_controlnet_pipeline.py  zit_image_generation_pipeline.py
backend/services/ltx_api_client/: ltx_api_client.py  ltx_api_client_impl.py
backend/services/model_downloader/: hugging_face_downloader.py  model_downloader.py
backend/state/: app_settings.py  app_state_types.py  conditioning_cache.py
backend/tests/: conftest.py  http_error_assertions.py  test_api_calls.py  test_auth.py  test_conditioning_cache.py  test_dw_pose_pipeline.py  test_generation.py  test_health.py  test_hf_auth.py  test_http_error_responses.py  test_ic_lora.py  test_import_safety.py  test_logging_policy.py  test_ltx_api_client.py  test_model_download_specs.py  test_model_layout_migration.py  test_models.py  test_no_mock_usage.py  test_pyright.py  test_response_models.py  test_runtime_policy.py  test_runtime_policy_decision.py  test_settings.py  test_state_actions.py
(+174 files in other folders)
