[project]
name = "ltx-desktop-backend"
version = "1.0.0"
description = "LTX-2 Video Generation Backend"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.3.0",
    "torch>=2.7.0",
    "torchaudio",
    "huggingface-hub>=0.23.0",
    "tqdm>=4.66.0",
    "pynvml>=11.5.0; sys_platform != 'darwin'",
    "pydantic>=2.7.0",
    # LTX-2 inference dependencies
    "ltx-core",
    "ltx-pipelines",
    "diffusers>=0.36.0",
    "ftfy>=6.1.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "av>=14.0.0",
    "peft>=0.18.0",
    "protobuf>=3.20.0",
    "transformers>=4.52,<5",
    "sentencepiece>=0.1.99",
    "sageattention>=1.0.0; sys_platform != 'darwin'",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    # SAM 3 for inpaint mode
    "sam3",
    # SAM 3 dependencies
    "timm>=1.0.17",
    "numpy>=1.26,<2",
    "regex",
    "iopath>=0.1.10",
    "typing_extensions",
    # LTX-core dependencies
    "einops",
    "safetensors",
    "accelerate",
    "scipy>=1.14",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = { index = "pytorch-cu129" }

# Git sources (will be redirected to local vendor in Dockerfile)
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
ltx-core = { git = "https://github.com/Lightricks/LTX-2.git", subdirectory = "packages/ltx-core" }
ltx-pipelines = { git = "https://github.com/Lightricks/LTX-2.git", subdirectory = "packages/ltx-pipelines" }
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }

# Alternative: Local vendor packages (requires modifying vendor source code)
# diffusers = { path = "../vendor/diffusers" }
# ltx-core = { path = "../vendor/ltx-2/packages/ltx-core" }
# ltx-pipelines = { path = "../vendor/ltx-2/packages/ltx-pipelines" }
# sam3 = { path = "../vendor/sam3" }

[project.optional-dependencies]
test = ["pytest>=8.0", "requests>=2.31", "httpx>=0.27"]
dev = ["pyright>=1.1.380", "debugpy>=1.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
